# mms_boundary_analysis

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
distance/: projection.py
io/: loader.py  shue_coeffs.json
normals/: mva.py
src/: __init__.py  config.py  csv_schema.py  events.py
src/detect/: classify.py  flip_detector.py  prune.py
src/imf_context/: orientation.py
src/io/: __init__.py  writer.py
src/mms_boundary_analysis/detect/: __init__.py
src/mms_boundary_analysis/distance/: __init__.py  local.py  shue.py
src/mms_boundary_analysis/imf_context/: __init__.py
src/mms_boundary_analysis/io/: omni.py
src/normals/: __init__.py  bootstrap.py  timing.py
src/visual/: __init__.py  normals_plot.py  timeseries.py
tests/: test_detector.py  test_distance.py  test_normals.py
visual/: imf_scatter.py
